navbar - home fixed on mobile view only on borads page

--- a/navbar/style-nav.css
+++ b/navbar/style-nav.css
@@ -91,7 +91,7 @@ header{
   
   /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
   @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child), .dropdown .dropbtn {
+    .topnav a, .dropdown .dropbtn {
       display: none;
     }
     .topnav a.icon {
@@ -157,5 +157,6 @@ header{
 
     .nav-links{
       float: none;
+      margin-top: 49px;
     }
   }
